--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="text-center max-w-3xl mx-auto">
-                <p class="text-xl italic mb-4">"Expert Ventures transformed my course into a thriving education business - while I focus on what I do best: teaching."</p>
+                <p class="text-xl italic mb-4">"Relearn Ventures transformed my course into a thriving education business - while I focus on what I do best: teaching."</p>
                 <p class="text-gray-400">- Sam Jones, B2B Copywriting Educator</p>
                 <p class="text-sm text-gray-400 mt-8">*Based on initial partner cohort</p>
             </div>
